Test decoupling of module java.scripting dependency